# agent-memory-fabric

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-placeholder.yml  ci.yml
docs/: architecture.md  github-push-and-tun-best-practices.zh-CN.md  mcp-client-integration.md  mcp-tools.md  model-handoff.md  repository-structure.md  roadmap.md  strategy-notes.zh-CN.md  tech-stack.md  threat-model.md  v0.1-milestone.md
examples/: python-quickstart.md  v0.1-verification.py
schemas/: get-decisions.request.schema.json  get-open-questions.request.schema.json  get-recent-project-context.request.schema.json  list-memories-by-repo.request.schema.json  memory-record.schema.json  redact-memory.request.schema.json  search-memory.request.schema.json  search-memory.response.schema.json  upsert-fact.request.schema.json  write-memory.request.schema.json  write-memory.response.schema.json
src/agent_memory_fabric/: __init__.py  handlers.py  mcp_server.py  models.py  policy.py  schema_loader.py  validation.py
src/agent_memory_fabric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agent_memory_fabric/storage/: __init__.py  base.py  postgres.py  sqlite.py
tests/: test_ci_validation.py  test_postgres_store.py  test_sqlite_store.py
