[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-fabric"
version = "0.1.0a0"
description = "A vendor-neutral memory layer for coding agents and enterprise AI workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Agent Memory Fabric Contributors" }
]
keywords = ["agents", "mcp", "memory", "ai", "governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "mcp>=1,<2"
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.0.0",
  "pytest>=8.0.0"
]

[project.scripts]
amf-mcp-server = "agent_memory_fabric.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
